update EpiNow2 branch
Former-commit-id: 257e95a8b324f707051fe0ab5585fe785423c8a6

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Imports:
   jsonlite,
   lubridate
 Remotes:
-  epiforecasts/EpiNow2,
+  epiforecasts/EpiNow2@more-ram-efficiency,
   epiforecasts/covidregionaldata
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
