--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,15 +20,18 @@ LazyData: true
 Imports:
   EpiNow2 (>= 1.2.0),
   covidregionaldata,
+  RtD3,
   data.table,
   future,
   here,
   httr,
   jsonlite,
-  lubridate
+  lubridate,
+  rmarkdown
 Remotes:
   epiforecasts/EpiNow2@more-ram-efficiency,
-  epiforecasts/covidregionaldata
+  epiforecasts/covidregionaldate,
+  epiforecasts/RtD3
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Biarch: true
