mesh shapefile and add to docs
Former-commit-id: 8ef03d35f893db9e30de7f3a8c622394d3e831fe

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,9 +30,7 @@ Imports:
   httr,
   jsonlite,
   lubridate,
-  rmarkdown,
-  sf, 
-  dplyr
+  rmarkdown
 Remotes:
   epiforecasts/EpiNow2,
   epiforecasts/covidregionaldate,
